# django-react-boilerplate

./: .cookiecutterrc  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile-django  Dockerfile-django.production  Dockerfile-node.production  Dockerfile-poetry  Makefile  README.md  deployment.txt  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.idea_template/: modules.xml
ansible/: README.md  pyproject.toml
ansible/group_vars/all/: vars.yml
ansible/host_vars/: vars-template.yml
ansible/host_vars/production.TODO.com/: vars.yml
ansible/host_vars/test.TODO.com/: vars.yml
ansible/roles/deploy/tasks/: letsencrypt.yml  main.yml
ansible/roles/deploy/templates/: environment  local.py  razzle.env
app/: .env.production  Makefile  package.json
app/src/: settings.js
app/src/components/: DefaultHeader.js  NavigationBar.js
app/src/components/layouts/: AuthLayout.js
app/src/configuration/: i18n.js  reducers.js  routes.js
app/src/containers/: AppShell.js
app/src/ducks/: posts.js
app/src/forms/auth/: Signup.js
app/src/sagas/posts/: createPost.js  deletePost.js  detailPost.js  fetchPostComments.js  fetchUserPosts.js  updatePost.js
app/src/server/: errorHandler.js  index.js
app/src/services/: api.js
app/src/styles/: backgound.scss
app/src/views/Home/: Home.js
app/src/views/instagramania/: CardBox.js  CommentsFromPost.js  CreateInstagramPost.js  DetailPost.js  PostsLists.css  PostsLists.js
instagramania/: .prospector.yaml  pyproject.toml
instagramania/accounts/: emails.py
instagramania/instagramania/: __init__.py  apps.py  urls.py  wsgi.py
instagramania/instagramania/rest/: urls.py
instagramania/locale/en/LC_MESSAGES/: django.po
instagramania/locale/et/LC_MESSAGES/: django.po
instagramania/sentiment_api/: admin.py  apps.py  models.py  pagination.py  serializers.py
instagramania/sentiment_api/migrations/: 0001_initial.py  0002_comment_replies.py  0003_auto_20210104_1159.py  0004_auto_20210104_1436.py  0005_auto_20210104_1524.py  0006_auto_20210104_1538.py  0007_auto_20210104_1541.py  0008_auto_20210104_1621.py  0009_auto_20210104_1624.py  0010_auto_20210105_0153.py  0011_auto_20210106_1344.py  0012_post_description.py  0013_post_instagram_user.py  0014_post_likes.py  0015_auto_20210108_0245.py
instagramania/sentiment_api/ml/: processing.py
instagramania/sentiment_api/rest/: urls.py  views.py
instagramania/settings/: base.py  local.py.example  local_test.py.example  production.py  staging.py  test.py
instagramania/static/: 502.html
instagramania/templates/: 500.html  base.html  home.html
instagramania/templates/emails/: base.html  base.txt  password_reset.html  password_reset.txt
